test/pass/override2.min
program
    string x := "abc"
start
    number x;
    x := 78;
    x + x !
end
