test/fail/strwithnumber2.min
program
    string x := "defg";
    number y := 123
start
    x > y  !
end
